--- a/website/src/i18n/en.json
+++ b/website/src/i18n/en.json
@@ -13,8 +13,7 @@
   },
   "contact": {
     "title": "Contact Us",
-    "email": "Email: transport@blueaskio.com",
-    "phone": ""
+    "email": "Email: transport@blueakio.com"
   },
   "company": {
     "introduction": "Company Introduction",
@@ -33,7 +32,7 @@
     "language": "Language"
   },
   "footer": {
-    "copyright": "© 2024 BLUEAKIO & BTransport"
+    "copyright": "© 2024 BLUEAKIO & BTransport. This page is in BETA state, reliability is not guaranteed. Current version: BETA 0.1.1"
   },
   "notFound": {
     "company": "Company not found",
@@ -45,7 +44,8 @@
   },
   "realTimeInfo": {
     "title": "Real-Time Information",
-    "noDelays": "No delays reported."
+    "noDelays": "No delays reported.",
+    "allNormal": "All lines are operating normally"
   },
   "timetable": {
     "title": "Timetable",
