--- a/website/src/i18n/zh.json
+++ b/website/src/i18n/zh.json
@@ -13,8 +13,7 @@
   },
   "contact": {
     "title": "联系我们",
-    "email": "邮箱: support@metro.com",
-    "phone": "0"
+    "email": "邮箱：transport@blueakio.com"
   },
   "company": {
     "introduction": "公司简介",
@@ -33,7 +32,7 @@
     "language": "语言"
   },
   "footer": {
-    "copyright": "© 2024 BLUEAKIO & BTransport"
+    "copyright": "© 2024 BLUEAKIO & BTransport. 页面处于 BETA 状态，不保证可靠性。当前版本：BETA 0.1.1"
   },
   "notFound": {
     "company": "公司未找到",
@@ -45,7 +44,8 @@
   },
   "realTimeInfo": {
     "title": "实时信息",
-    "noDelays": "无延误报告。"
+    "noDelays": "无延误报告。",
+    "allNormal": "所有线路均正常运行"
   },
   "timetable": {
     "title": "时刻表",
