修复与线路运营状况相关代码内容中未能根据 i18n 语言提供语言文件的情况，同时修改页脚版本号

--- a/website/src/i18n/zh-Hant.json
+++ b/website/src/i18n/zh-Hant.json
@@ -27,7 +27,7 @@
     "language": "語言"
   },
   "footer": {
-    "copyright": "© 2024 BLUEAKIO & BTransport. 頁面處於 BETA 狀態，不保證可靠性。目前版本：BETA 0.1.1"
+    "copyright": "© 2024 BLUEAKIO & BTransport. 頁面處於 BETA 狀態，不保證可靠性。目前版本：BETA 0.1.2-hotfix-1"
   },
   "notFound": {
     "company": "公司未找到",
