--- a/website/src/i18n/en.json
+++ b/website/src/i18n/en.json
@@ -27,7 +27,7 @@
     "language": "Language"
   },
   "footer": {
-    "copyright": "© 2024 BLUEAKIO & BTransport. This page is in BETA state, reliability is not guaranteed. Current version: BETA 0.1.1"
+    "copyright": "© 2024 BLUEAKIO & BTransport. This page is in BETA state, reliability is not guaranteed. Current version: BETA 0.1.2-hotfix-1"
   },
   "notFound": {
     "company": "Company not found",
