修改页眉布局，优化部分代码

--- a/website/src/i18n/zh-HK.json
+++ b/website/src/i18n/zh-HK.json
@@ -24,10 +24,11 @@
     "operationalStatus": "營運狀態"
   },
   "header": {
+    "menu": "菜單",
     "language": "語言"
   },
   "footer": {
-    "copyright": "© 2024 BLUEAKIO & BTransport. 頁面處於 BETA 狀態，不保證可靠性。目前版本：BETA 0.1.2-hotfix-1"
+    "copyright": "© 2024 BLUEAKIO & BTransport. 頁面處於 BETA 狀態，不保證可靠性。目前版本：BETA 0.1.3"
   },
   "notFound": {
     "company": "公司未找到",
