--- a/website/src/i18n/zh-CN.json
+++ b/website/src/i18n/zh-CN.json
@@ -24,10 +24,11 @@
     "operationalStatus": "运营状态"
   },
   "header": {
+    "menu": "菜单",
     "language": "语言"
   },
   "footer": {
-    "copyright": "© 2024 BLUEAKIO & BTransport. 页面处于 BETA 状态，不保证可靠性。当前版本：BETA 0.1.2-hotfix-1"
+    "copyright": "© 2024 BLUEAKIO & BTransport. 页面处于 BETA 状态，不保证可靠性。当前版本：BETA 0.1.3"
   },
   "notFound": {
     "company": "公司未找到",
