--- a/website/src/i18n/zh-CN.json
+++ b/website/src/i18n/zh-CN.json
@@ -1,7 +1,8 @@
 {
   "home": {
     "title": "首页",
-    "welcome": "欢迎来到 BTransport"
+    "welcome": "欢迎来到 BTransport",
+    "company": "加入的公司列表"
   },
   "lines": {
     "title": "线路",
@@ -28,7 +29,8 @@
     "language": "语言"
   },
   "footer": {
-    "copyright": "© 2024 BLUEAKIO & BTransport. 页面处于 BETA 状态，不保证可靠性。当前版本：BETA 0.1.3"
+    "copyright": "© 2024 BLUEAKIO & BTransport.",
+    "beta": "页面处于 BETA 状态，不保证可靠性。当前版本：BETA 0.1.3"
   },
   "notFound": {
     "company": "公司未找到",
