--- a/website/src/i18n/en.json
+++ b/website/src/i18n/en.json
@@ -17,7 +17,7 @@
     "description": "No description available.",
     "lineMap": "Interactive Line Map",
     "operationalStatus": "Operational Status",
-    "operationalInformation": "Operational Information",
+    "operationalInformation": "Operational Information", 
     "noDelays": "No delays reported."
   },
   "line": {
@@ -29,8 +29,8 @@
     "language": "Language"
   },
   "footer": {
-    "copyright": "© 2024 BLUEAKIO & BTransport.",
-    "beta": "This page is in BETA state, reliability is not guaranteed. Current version: BETA 0.1.3"
+    "beta": "This page is in BETA state, reliability is not guaranteed.",
+    "version": "Current version: BETA 0.1.3"
   },
   "notFound": {
     "company": "Company not found",
@@ -59,5 +59,11 @@
     "partialSuspension": "Partial Suspension",
     "termination": "Termination",
     "suspended": "Suspended"
+  },
+  "BLUEAKIO": {
+    "website": "Official Website",
+    "DesignBLUEAKIO": "DesignBLUEAKIO",
+    "BTransport": "BTransport",
+    "TangibleCraft": "TangibleCraft"
   }
 }
