--- a/website/src/i18n/zh-CN.json
+++ b/website/src/i18n/zh-CN.json
@@ -29,8 +29,8 @@
     "language": "语言"
   },
   "footer": {
-    "copyright": "© 2024 BLUEAKIO & BTransport.",
-    "beta": "页面处于 BETA 状态，不保证可靠性。当前版本：BETA 0.1.3"
+    "beta": "页面处于 BETA 状态，不保证可靠性",
+    "version": "当前版本：BETA 0.1.3"
   },
   "notFound": {
     "company": "公司未找到",
@@ -59,5 +59,11 @@
     "partialSuspension": "部分停运",
     "termination": "直通运转终止",
     "suspended": "停止运行"
+  },
+  "BLUEAKIO": {
+    "website": "官方网站",
+    "DesignBLUEAKIO": "DesignBLUEAKIO",
+    "BTransport": "BTransport",
+    "TangibleCraft": "堂瞰工艺"
   }
 }
