--- a/website/src/i18n/zh-HK.json
+++ b/website/src/i18n/zh-HK.json
@@ -2,7 +2,7 @@
   "home": {
     "title": "首頁",
     "welcome": "歡迎來到 BTransport",
-    "company": "加入的公司列表"
+    "company": "加入的公司名單"
   },
   "lines": {
     "title": "線路",
@@ -29,8 +29,8 @@
     "language": "語言"
   },
   "footer": {
-    "copyright": "© 2024 BLUEAKIO & BTransport.",
-    "beta": "頁面處於 BETA 狀態，不保證可靠性。目前版本：BETA 0.1.3"
+    "beta": "頁面處於 BETA 狀態，不保證可靠度",
+    "version": "目前版本：BETA 0.1.3"
   },
   "notFound": {
     "company": "公司未找到",
@@ -59,5 +59,11 @@
     "partialSuspension": "部分停駛",
     "termination": "直通運轉終止",
     "suspended": "停止運作"
+  },
+  "BLUEAKIO": {
+    "website": "官方網站",
+    "DesignBLUEAKIO": "DesignBLUEAKIO",
+    "BTransport": "BTransport",
+    "TangibleCraft": "堂瞰工藝"
   }
 }
