--- a/website/src/i18n/en.json
+++ b/website/src/i18n/en.json
@@ -1,4 +1,8 @@
 {
+  "404": {
+    "message": "Sorry, the page you visited does not exist.",
+    "backHome": "Back to Home"
+  },
   "home": {
     "title": "Home",
     "welcome": "Welcome to BTransport",
