--- a/website/src/i18n/zh-CN.json
+++ b/website/src/i18n/zh-CN.json
@@ -1,4 +1,8 @@
 {
+  "404": {
+    "message": "抱歉，您访问的页面不存在。",
+    "backHome": "返回首页"
+  },
   "home": {
     "title": "首页",
     "welcome": "欢迎来到 BTransport",
