页脚增加 服务状态 跳转按钮

--- a/website/src/i18n/en.json
+++ b/website/src/i18n/en.json
@@ -68,6 +68,7 @@
     "website": "Official Website",
     "DesignBLUEAKIO": "DesignBLUEAKIO",
     "BTransport": "BTransport",
-    "TangibleCraft": "TangibleCraft"
+    "TangibleCraft": "TangibleCraft",
+    "status": "Network Status"
   }
 }
