--- a/website/src/i18n/zh-CN.json
+++ b/website/src/i18n/zh-CN.json
@@ -68,6 +68,7 @@
     "website": "官方网站",
     "DesignBLUEAKIO": "DesignBLUEAKIO",
     "BTransport": "BTransport",
-    "TangibleCraft": "堂瞰工艺"
+    "TangibleCraft": "堂瞰工艺",
+    "status": "服务状态"
   }
 }
