--- a/website/src/i18n/zh-HK.json
+++ b/website/src/i18n/zh-HK.json
@@ -68,6 +68,7 @@
     "website": "官方網站",
     "DesignBLUEAKIO": "DesignBLUEAKIO",
     "BTransport": "BTransport",
-    "TangibleCraft": "堂瞰工藝"
+    "TangibleCraft": "堂瞰工藝",
+    "status": "服務狀態"
   }
 }
