再度修改公司简介页眉，修改页眉

--- a/website/src/i18n/en.json
+++ b/website/src/i18n/en.json
@@ -40,7 +40,8 @@
   },
   "header": {
     "menu": "Menu",
-    "language": "Language"
+    "language": "Language",
+    "company": "Company"
   },
   "footer": {
     "beta": "This page is in BETA state, reliability is not guaranteed.",
