--- a/website/src/i18n/zh-HK.json
+++ b/website/src/i18n/zh-HK.json
@@ -6,7 +6,7 @@
   "home": {
     "title": "首頁",
     "welcome": "歡迎來到 BTransport",
-    "company": "加入的公司"
+    "company": "加入的公司名單"
   },
   "lines": {
     "title": "線路",
@@ -30,8 +30,7 @@
   },
   "header": {
     "menu": "菜單",
-    "language": "語言",
-    "company": "公司"
+    "language": "語言"
   },
   "footer": {
     "beta": "頁面處於 BETA 狀態，不保證可靠度",
@@ -69,13 +68,7 @@
     "website": "官方網站",
     "DesignBLUEAKIO": "DesignBLUEAKIO",
     "BTransport": "BTransport",
-    "TangibleCraft": "TangibleCraft",
-    "status": "網絡狀態"
-  },
-  "companyDetail": {
-    "title": "公司簡介",
-    "history": "公司歷史",
-    "services": "主要服務",
-    "backToHome": "返回首頁"
+    "TangibleCraft": "堂瞰工藝",
+    "status": "服務狀態"
   }
 }
