--- a/website/src/i18n/locales/en.json
+++ b/website/src/i18n/locales/en.json
@@ -22,7 +22,17 @@
     "lineMap": "Interactive Line Map",
     "operationalStatus": "Operational Status",
     "operationalInformation": "Operational Information", 
-    "noDelays": "No delays reported."
+    "noDelays": "No delays reported.",
+    "history": "History",
+    "scale": "Scale",
+    "employees": "Employees: {count}",
+    "stations": "Stations: {count}",
+    "linesCount": "Lines: {count}",
+    "services": "Services",
+    "resources": "Resources",
+    "website": "Official Website",
+    "forum": "Discussion Forum",
+    "socialMedia": "Social Media"
   },
   "line": {
     "map": "Line Map",
@@ -30,7 +40,8 @@
   },
   "header": {
     "menu": "Menu",
-    "language": "Language"
+    "language": "Language",
+    "company": "Company"
   },
   "footer": {
     "beta": "This page is in BETA state, reliability is not guaranteed.",
@@ -70,5 +81,11 @@
     "BTransport": "BTransport",
     "TangibleCraft": "TangibleCraft",
     "status": "Network Status"
+  },
+  "companyDetail": {
+    "title": "Company Profile",
+    "history": "Company History",
+    "services": "Main Services",
+    "backToHome": "Back to Home"
   }
 }
